# Terminal

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Doxyfile  README.md  conanfile.txt
.cargo/: config.toml
.github/workflows/: ci.yml  dependency_review.yml
conan/profiles/: windows-debug
docs/adr/: ADR_TEMPLATE.md  adr-0001-project-prototype-architecture.md  adr_0001_project_prototype_architecture.md
docs/decisions/: DECISION_TEMPLATE.md  DR-0001-adopt-baseline-quality-gates.md
docs/doxygen/: mainpage.md
fuzz/: README.md
scripts/: check-format.bat  docs.bat  format.bat  fuzz-cpp.bat  fuzz-rust.bat  quality-check.bat
src/application/: Cargo.toml
src/dashboard/: CMakeLists.txt  main.cpp
src/gateway/: Cargo.toml
src/persistence-adapter/: Cargo.toml
src/persistence_adaptor/: Cargo.toml
src/pricing-engine/: CMakeLists.txt
src/pricing_engine/: CMakeLists.txt
src/risk-engine/: CMakeLists.txt
src/risk_engine/: CMakeLists.txt
src/shared/: CMakeLists.txt
src/shared/factory/: CMakeLists.txt  factory.hpp
src/shared/singleton/: CMakeLists.txt  singleton.hpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/shared/factory/: CMakeLists.txt  factory_tests.cpp
tests/unit/shared/singleton/: CMakeLists.txt
